# MiroFish_Edit

./: .env.example  .gitignore  CLAUDE.md  README.md  run-backend.ps1  run-frontend.ps1  run-neo4j.ps1  setup-neo4j.ps1  start-neo4j.ps1  start.ps1  stop-neo4j.ps1  stop.ps1
DOC/: INPUT_BEST_PRACTICES.md  pipeline-guide.html
backend/: pyproject.toml  requirements.txt  run.py
backend/app/: __init__.py  config.py
backend/app/api/: __init__.py  graph.py  report.py  simulation.py
backend/app/models/: __init__.py  project.py  task.py
backend/app/services/: __init__.py  chroma_store.py  entity_reader.py  graph_builder.py  graph_memory_updater.py  graph_store.py  graph_tools.py  llm_extractor.py  neo4j_store.py  oasis_profile_generator.py  ontology_generator.py  persona_validator.py  report_agent.py  simulation_config_generator.py  simulation_ipc.py  simulation_manager.py  simulation_runner.py  text_processor.py
backend/app/utils/: __init__.py  file_parser.py  llm_client.py  logger.py  retry.py
backend/scripts/: run_parallel_simulation.py  run_reddit_simulation.py  run_twitter_simulation.py  test_persona_validation.py
backend/tests/: conftest.py  test_real_e2e.py
backend/tests/integration/: test_e2e_pipeline.py  test_graph_api.py  test_pipeline_flow.py  test_simulation_api.py
backend/tests/unit/: test_entity_reader.py  test_graph_builder.py  test_llm_client.py  test_ontology_generator.py  test_project_model.py  test_simulation_manager.py  test_task_model.py  test_text_processor.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.vue
(+36 files in other folders)
