[project]
name = "mirofish-backend"
version = "0.2.0"
description = "MiroFish - 다중 에이전트 기반 군중 지능 예측 엔진"
requires-python = ">=3.11"
license = { text = "AGPL-3.0" }
authors = [
    { name = "MiroFish Team" }
]

dependencies = [
    # 핵심 프레임워크
    "flask>=3.0.0",
    "flask-cors>=6.0.0",

    # LLM 관련
    "openai>=1.0.0",

    # 그래프 저장소 (Neo4j)
    "neo4j>=5.0.0",

    # 벡터 검색 (ChromaDB)
    "chromadb>=0.4.0",

    # 임베딩 (ChromaDB 기본 모델)
    "sentence-transformers>=2.0.0",

    # OASIS 소셜 미디어 시뮬레이션
    "camel-oasis==0.2.5",
    "camel-ai==0.2.78",

    # 파일 처리
    "PyMuPDF>=1.24.0",
    # 인코딩 감지 (비 UTF-8 텍스트 파일 지원)
    "charset-normalizer>=3.0.0",
    "chardet>=5.0.0",

    # 유틸리티
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pipreqs>=0.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]
